<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.16</version>
    </parent>

    <groupId>com.bytedesk</groupId>
    <artifactId>im</artifactId>
    <version>${revision}</version>

    <packaging>pom</packaging>

    <modules>
        <module>channels</module>
        <module>modules</module>
        <module>plugins</module>
        <module>starter</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>21</java.version>
        <querydsl.version>5.1.0</querydsl.version>
        <flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>
		<jackson.version>2.21.2</jackson.version>
        <jackson.annotation.version>2.21</jackson.annotation.version>
        <easyexcel.version>4.0.3</easyexcel.version>
        <flowable.version>7.2.0</flowable.version>
        <jedis.version>6.0.0</jedis.version>
        <!-- <redisson.version>4.1.0</redisson.version> -->
        <springdoc.version>2.8.8</springdoc.version>
        <spring-retry.version>2.0.5</spring-retry.version>
        <spring-ai.version>1.1.2</spring-ai.version>
        <!-- 阶段 2：spring-ai-alibaba 依赖已停用，版本属性暂时注释保留便于回滚。
		<spring-ai-alibaba.version>1.1.2.2</spring-ai-alibaba.version>
        <spring-ai-alibaba-extensions.version>1.1.2.2</spring-ai-alibaba-extensions.version>
        -->
        <dashscope-sdk-java.version>2.22.24</dashscope-sdk-java.version>
        <!-- <agentscope.version>2.0.0</agentscope.version> -->
        <fastjson2.version>2.0.61</fastjson2.version>
        <revision>3.4.0</revision>
    </properties>

    <dependencies>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <inherited>true</inherited>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                        <configuration>
                            <updatePomFile>true</updatePomFile>
                            <flattenMode>resolveCiFriendliesOnly</flattenMode>
                            <pomElements>
                                <parent>expand</parent>
                                <distributionManagement>remove</distributionManagement>
                                <repositories>remove</repositories>
                            </pomElements>
                        </configuration>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Javadoc 插件配置 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.11.2</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <charset>UTF-8</charset>
                    <docencoding>UTF-8</docencoding>
                    <show>private</show>
                    <nohelp>true</nohelp>
                    <source>${java.version}</source>
                    <failOnError>false</failOnError>
                    <additionalOptions>
                        <additionalOption>-Xdoclint:none</additionalOption>
                    </additionalOptions>
                    <excludePackageNames>*.test.*:*.tests.*:com.bytedesk.projects.*</excludePackageNames>
                    <outputDirectory>${project.basedir}/starter/src/main/resources/static</outputDirectory>
                    <reportOutputDirectory>${project.basedir}/starter/src/main/resources/static</reportOutputDirectory>
                    <destDir>apidoc</destDir>
                    <minmemory>128m</minmemory>
                    <maxmemory>512m</maxmemory>
                    <fork>true</fork>
                    <detectJavaApiLink>false</detectJavaApiLink>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>